# frontrun

./: .gitignore  CHANGELOG.rst  CLAUDE.md  Cargo.toml  FUTURE_WORK.md  Makefile  PEP-703-REPORT.md  README.md  SLOW_TESTS.md  pyproject.toml  release-version.sh  test_example.py  venv.mk
crates/dpor/: Cargo.toml
crates/dpor/src/: engine.rs  lib.rs  object.rs  thread.rs
docs/: CASE_STUDIES.rst  api_reference.rst  approaches.rst  conf.py  dpor.rst  dpor_guide.rst  examples.rst  index.rst  internals.rst  orm_race.rst  postgres_races.rst  quickstart.rst
examples/: orm_race.py  postgres_races.py
frontrun/: __init__.py  _cooperative.py  _io_detection.py  _preload_io.py  _trace_format.py  _tracing.py  async_bytecode.py  async_scheduler.py  async_trace_markers.py  bytecode.py  cli.py  common.py  dpor.py  pytest_plugin.py  trace_markers.py
ideas/: COMPREHENSIBLE_ERRORS.md  badideas.md  detecting_stateful_resources.md  dpor_spec.md  known_issues.md  loom_style_primitives.md  property_based_marker_schedules.md  stack_introspection_for_dpor.md  tla_plus_integration.md  whatever.md
interlace/: __init__.py  async_bytecode.py  async_scheduler.py  async_trace_markers.py  bytecode.py  common.py  trace_markers.py
tests/: buggy_programs.py  conftest.py  test_async_bytecode.py  test_async_trace_markers.py  test_bugfixes.py  test_bytecode.py  test_concurrency_bug_classes.py  test_dpor.py  test_dpor_io.py  test_dpor_preload.py  test_frontrun.py  test_integration_dpor_gaps.py  test_integration_http.py  test_integration_json_file.py  test_integration_redis.py  test_interlace.py  (+5 more)
(+24 files in other folders)
